@@ -28,6 +28,7 @@
 import sys
 import os.path
 import copy
+import math
 
 class ADSToOrigin():
   """A clas that provide a easy tool, transfer
@@ -35,29 +36,31 @@ class ADSToOrigin():
   #member variable
   data = None 
   tital = None
-
-  genoutname = lambda self,x : os.path.splitext(x)[0] + "_origin.txt"
+  charttype = None
+  genoutname = lambda self,x : os.path.splitext(x)[0] + "_plot.txt"
 
   def __init__(self):
     self.data = []
     self.tital = []
+    self.charttype = "rectangle"
+    self.Z0 = 50
+    self.smithsuffix = ["_real", "_imag"]
 
-  def prompt(self,):
-		"""prompt ask user input file name, then call convert
-		to generate new-style file """
-		while True:
-			filename = raw_input("Please input the filename to convert(empty to exit): ")
-			if not filename :
-				sys.exit(0)
-			else:
-				filename = "./" + filename
-				self.history.append(filename)
-				self.convert(filename)
+  def MP2RI(self, magnitude, phase):
+    """return real, imaginary part from magnitude, phase"""
+    mag = float(magnitude)
+    phz = float(phase) * math.pi / 180
+    R = mag * math.cos(phz)
+    X = mag * math.sin(phz)
+    denom = (1-2*R+R**2+X**2)
+    return str(self.Z0 * (1-R**2-X**2)/denom), str(self.Z0 * 2*X/denom)
 
   def convert(self, filename):
     """pack of read and write file"""
     self.data = []
+    self.tital = []
     self.readfile(filename)
+
     #verify data
     datalength = len(self.data[0])
     identical = True
@@ -69,25 +72,12 @@ class ADSToOrigin():
       print("The data length in file %s is not identical" % (filename))
       print("Output file will be incorrect")
 
+    #output file
     outname = self.genoutname(filename)
     self.writefile(outname)
 
   def readfile(self, filename):
-    """read file into list, ADS file is record in following format
-    sweepvar1 ... sweepvar_n-1 sweepvarn ... data
-    var1_1    ... varn-1_1     varn_1    ... data_1
-    var1_1    ... varn-1_1     varn_2    ... data_2
-    var1_1    ... varn-1_1     varn_3    ... data_3
-    ...           
-    var1_1    ... varn-1_1     varn_m    ... data_m
-    
-    sweepvar1 ... sweepvar_n-1 sweepvarn ... data
-    var1_1    ... varn-1_2     varn_1    ... data_1
-    var1_1    ... varn-1_2     varn_2    ... data_2
-    var1_1    ... varn-1_2     varn_3    ... data_3
-    ...           
-    var1_1    ... varn-1_2     varn_m    ... data_m
-    """
+    """readfile, read a block separated by blank line"""
     titalcol = []
     idxcol = []
     valcol = []
@@ -99,6 +89,9 @@ class ADSToOrigin():
     try:
       infile = open(filename, mode='r')
       for line in infile:
+        if self.charttype == "rectangle" and line.find('/') != -1:
+          self.charttype = "smith"
+
         line = line.strip().strip('\n').split()
         if not line:
           if hasData:
@@ -106,7 +99,11 @@ class ADSToOrigin():
             if isFirstBlock:
               isFirstBlock = False
               self.data.append([copy.copy(x) for x in idxcol])
-            self.data.append([copy.copy(x) for x in valcol])
+            if self.charttype == "rectangle":
+              self.data.append([copy.copy(x) for x in valcol])
+            elif self.charttype == "smith":
+              self.data.append([copy.copy(x) for x in valcol[0]])
+              self.data.append([copy.copy(x) for x in valcol[1]])
             self.tital.append(titalcol)
             hasData = False
             del block[:]
@@ -120,34 +117,62 @@ class ADSToOrigin():
 			sys.stderr.write("file %s doesn't exist\n" % (filename))
 			return(1)
     finally:
+      print("convert %s, file type %s" % (filename, self.charttype))
       if infile is not None:
         infile.close()
 
   def processBlock(self, block, isFirstBlock):
-    """read one block, and add item to titalcol, idxcol and valcol"""
+    """read one block, and add item to titallist, idxlist and vallist"""
     # parse block
     # tital is block[0][0]=block[1][0],block[0][1]=block[1][1]....
     idxlist = [ 0 for i in range(len(block)-1)]
-    vallist = [ 0 for i in range(len(block)-1)]
+    if self.charttype == "rectangle":
+      vallist = [ 0 for i in range(len(block)-1)]
+    elif self.charttype == "smith":
+      vallist = [[0 for i in range(len(block)-1)],[0 for i in range(len(block)-1)]]
     titallist = []
+
+    # parse tital
+    # tital is block[0][0]=block[1][0],block[0][1]=block[1][1]....
+    # in smith chart format, we need to duplicate tital for real / imaginary
+    # and duplicate tital 
     if len(block[0]) <2:
       sys.stderr.write("There are some error in this ADS file")
     elif len(block[0]) == 2:
       if isFirstBlock:
         titallist.append(block[0][0])
-      titallist.append(block[0][1])
-      tital = " ".join(titallist)
+      if self.charttype == "rectangle":
+        titallist.append(block[0][1])
+      elif self.charttype == "smith":
+        titallist.append("\t".join(block[0][1]+self.smithsuffix[i] for i in range(2)))
+      tital = "\t".join(titallist)
     elif len(block[0]) > 2:
-      for i,(row0,row1) in enumerate(zip(block[0][0:-2], block[1][0:-2])):
-        titallist.append("%s=%s" % (row0, row1))
-      tital = ",".join(titallist)
+      if self.charttype == "rectangle":
+        for row0,row1 in zip(block[0][0:-2], block[1][0:-2]):
+          titallist.append("%s=%s" % (row0, row1))
+        tital = ",".join(titallist)
+      elif self.charttype == "smith":
+        for row0,row1 in zip(block[0][0:-2], block[1][0:-2]):
+          titallist.append("%s=%s" % (row0, row1))
+        titalstem = ",".join(titallist)
+        tital = "\t".join(titalstem+self.smithsuffix[i] for i in range(2))
       if isFirstBlock:
         tital = ("%s " %(block[0][-2])) + tital 
-    for i in range(1,len(block)):
-      idxlist[i-1] = block[i][-2]
-      vallist[i-1] = block[i][-1]
+    
+    # parse data, different behavior with rectangle or smith chart
+    # in rectangle, simply use last two column as index and value column
+    # in smith chart, we need to change magnitude / phase into real img 
+    if self.charttype == "rectangle":
+      for i in range(1,len(block)):
+        idxlist[i-1] = block[i][-2]
+        vallist[i-1] = block[i][-1]
+    elif self.charttype == "smith":
+      idxid = (len(block)-1)/3
+      for i in range(1, len(block)):
+        idxlist[i-1] = block[i][0]
+        vallist[0][i-1], vallist[1][i-1] = self.MP2RI(block[i][-3], block[i][-1])
 
-    return tital,idxlist, vallist
+    return tital,idxlist,vallist
 
   def writefile(self, filename):
     """write loaded data into output file"""
